A few more switch variants
Compiling with java 17 and enable-preview on the gen'd code
Breaks & continues 1 level deep.
While loops.
pre/post dec/inc.
multi expr of 1
Smarter BinOp paren grouping